--- a/app/views/templates/row.hbs
+++ b/app/views/templates/row.hbs
@@ -1,6 +1,6 @@
 <tr>
   <td class="name">{{{display_name}}}<br/><small>{{{login}}}<br/>{{{email}}}</small></td>
-  <td class="website"><a href="{{{website}}}">{{{website}}}</a></td>
+  <td class="website"><a href="{{{website}}}">{{{website}}}</a><br/><a href="http://twitter.com/{{twitter}}">{{twitter}}</a></td>
   <td class="avatar">{{#if avatar}}<img src="{{{avatar}}}"/>{{/if}}</td>
   <td class="about">{{{about}}}</td>
   <td class="buttons">
